# rag-suite

./: .env.template  .gitignore  LICENSE  README.md  docker-compose.yml
backend_inference/: .gitignore  Dockerfile  README.md  pyproject.toml
backend_inference/src/: main.py
backend_inference/src/core/: config.py  dependencies.py
backend_inference/src/models/api/: inference.py
backend_inference/src/routes/: health.py  inference.py
backend_inference/src/services/: inference_service.py  service_factory.py
backend_inference/src/tools/: ollama_inference_client.py  reranker_api_client.py
backend_inference/tests/: test_api_inference.py  test_error_mapping.py  test_inference_service.py  test_ollama_inference_client.py  test_reranker_api_client.py
backend_ingestion/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend_ingestion/scripts/: run_section_audit.py
backend_ingestion/src/: main.py
backend_ingestion/src/core/: config.py  database.py  dependencies.py
backend_ingestion/src/models/db/: chunk.py  (+2 more)
backend_ingestion/src/prompts/: contextual_chunk_header.md  grounded_answer.md
backend_ingestion/src/services/: operation_manager.py  project_service.py  retrieval_service.py  service_factory.py
backend_ingestion/src/tools/: contextual_header_generator.py  json_response_parser.py  ollama_chat_client.py  ollama_embedding_client.py  qdrant_indexer.py  thinking_sanitizer.py
backend_ingestion/tests/: test_agentic_chunker.py  test_api_pipeline.py  test_contextual_header_generator.py  test_error_mapping.py  test_inference_service.py  test_ingestion_modes.py  test_json_response_parser.py  test_operation_manager.py
backend_reranker/: .gitignore  Dockerfile  README.md  pyproject.toml
backend_reranker/src/: __init__.py  main.py
backend_reranker/src/core/: __init__.py  config.py  dependencies.py  exceptions.py
backend_reranker/src/models/: __init__.py
backend_reranker/src/routes/: __init__.py  health.py  rerank.py
backend_reranker/src/services/: __init__.py  rerank_service.py  service_factory.py
backend_reranker/src/tools/: __init__.py  cross_encoder_reranker.py
backend_reranker/tests/: test_api_reranker.py  test_cross_encoder_tool.py  test_rerank_service.py
(+164 files in other folders)
