[project]
name = "backend-reranker"
version = "0.1.0"
description = "RAG Suite dedicated reranker backend (cross-encoder over ROCm/CPU)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.2",
    "httpx>=0.28.1",
    "numpy>=2.3.4",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "transformers>=4.41,<5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]
